--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "neoan3/email-password-auth",
+    "name": "neoan3/user",
     "description": "simple user model",
     "license": "mit",
     "authors": [
