--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "neoan3/email-password-auth",
+    "name": "neoan3/user",
     "version":"1.0.0",
     "description": "simple user model",
     "license": "MIT",
